--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-management-frontend",
+  "name": "enginia-do-frontend",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
