rebrand: Change firm name from Enginia to Enjinia
- Updated all occurrences of Enginia to Enjinia across the application
- Changed package names, titles, and descriptions
- Updated API URLs and configuration
- Updated PWA manifest and service worker
- Updated cache version to v1.9.0

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enginia-do-frontend",
+  "name": "enjinia-do-frontend",
   "version": "1.8.0",
   "private": true,
   "dependencies": {
