--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Enginia-do",
-  "name": "Enginia-do - Task Management",
+  "short_name": "Enjinia-do",
+  "name": "Enjinia-do - Task Management",
   "description": "Professional task management with push notifications, team collaboration, and mobile-first design",
   "icons": [
     {
