--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
     "mongoose": "^8.0.3",
+    "node-cron": "^3.0.3",
     "web-push": "^3.6.7"
   },
   "devDependencies": {
