--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "enginia-do-frontend",
+  "name": "enjinia-do-frontend",
   "version": "1.8.0",
   "private": true,
   "dependencies": {
     "axios": "^1.6.2",
-    "firebase": "^10.7.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
