Update Firebase config, enable notifications by default, and update service workers

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,10 +1,8 @@
-
-REACT_APP_FIREBASE_API_KEY=AIzaSyBmVWT4dd3m-H9Wf5ksBSmGA6AKiqk1Nkg
-REACT_APP_FIREBASE_AUTH_DOMAIN=trido-11.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=trido-11
-REACT_APP_FIREBASE_STORAGE_BUCKET=trido-11.firebasestorage.app
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=543027789224
-REACT_APP_FIREBASE_APP_ID=1:543027789224:web:8b9e94f68379b0b1e7319d
-REACT_APP_FIREBASE_MEASUREMENT_ID=G-7D624BB27G
-
-
+REACT_APP_API_URL=https://enginia-do.onrender.com/api
+REACT_APP_FIREBASE_API_KEY=AIzaSyCQ6eqxmHSvtlSpb280cGUQJyhQuh6RH9Q
+REACT_APP_FIREBASE_AUTH_DOMAIN=engine-11-a08c8.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=engine-11-a08c8
+REACT_APP_FIREBASE_STORAGE_BUCKET=engine-11-a08c8.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=554554618350
+REACT_APP_FIREBASE_APP_ID=1:554554618350:web:8eee6501172e862fd41eff
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-Y149J2PC6F
