--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,10 @@ NODE_ENV=development
 # JWT Secret (Generate a secure random string)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
+# OpenAI API Configuration (REQUIRED for MOM Grammar Correction)
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your-openai-api-key-here
+
 # Firebase Configuration
 FIREBASE_SERVICE_ACCOUNT_PATH=./firebase-service-account.json
 FIREBASE_PROJECT_ID=engine-11-a08c8
