--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,16 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.67.6",
+    "docxtemplater-image-module-free": "^1.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
     "mongoose": "^8.0.3",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "openai": "^6.17.0",
+    "pizzip": "^3.2.0",
+    "translate-google": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
